--- a/04_HTML/5_multimedia.html
+++ b/04_HTML/5_multimedia.html
@@ -81,10 +81,16 @@
       0: 한번만 재생(기본값)
       1: 무한재생
     -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/GAIb0-fo2yI?playlist=GAIb0-fo2yI,fpKoeCERYHs&loop=1" frameborder="0"></iframe>
 
     <!-- playlist 필수 작성!! -->
     <iframe width="560" height="315" src="https://www.youtube.com/embed/GAIb0-fo2yI?playlist=GAIb0-fo2yI&loop=1" frameborder="0"></iframe>
 
+    <!-- 유튜브 컨트롤
+      0: 플레이어 컨트롤 표시 안함
+      1: 플레이어 컨트롤 표시(기본값)
+    -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/GAIb0-fo2yI?controls=0" frameborder="0"></iframe>
 
 </body>
 </html>
