--- a/04_HTML/07_input.html
+++ b/04_HTML/07_input.html
@@ -4,18 +4,137 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    .placeholder-hidden:focus::placeholder {color: transparent;}
+  </style>
 </head>
 <body>
   <!-- input(inline-block) : 데이터를 입력받는 요소
     기본적인 특징은 inline
     + block요소처럼 크기/여백 지정 가능 
   -->
+
   <!-- 값을 미리 입력 -->
   <input type="text" value="goni.kim">
   <!-- 입력할 값의 힌트 -->
   <input type="text" placeholder="아이디를 입력하세요">
+  <!-- tip 포커스 시 사라지는 힌트 -->
+  <input type="text" placeholder="아이디를 입력하세요" class="placeholder-hidden">
 
-  <!-- 비활성화 -->
-   <input type="text" disabled>
-</body>
+  <!-- 비활성화 : 수정 불가, Tab키로 선택 불가, submit 불가 -->
+  <input type="text"  value="disabled 테스트" disabled>
+
+  <!-- (참고) 읽기 전용 : 수정 불가, Tab키로 선택 가능, submit 가능 -->
+  <input type="text" value="readonly 테스트" readonly>
+
+  <hr>
+
+  <!-- 체크박스 -->
+  <input type="checkbox"> Apple
+  <input type="checkbox"> Banana
+
+  <!-- label 바인딩 조건(둘 중 하나만 만족하면 됨)
+    1.label 요소 내부에 input 요소를 배치
+    2.for 속성이 input 요소의 id 속성과 같아야 함 
+  -->
+  <label for="apple"><input type="checkbox" id="apple"> Apple</label>
+  <label for="banana"><input type="checkbox" id="banana"> Banana</label>
+
+  <!-- 
+  label 사용 이점(웹 접근성과 관련)
+  1. 매우 작은 영역(예: 확인란)을 클릭하는 데 어려움이 있는 사용자
+  - 사용자가 요소 내의 텍스트를 클릭하면 <label>입력이 토글되기 때문(히트 영역이 증가함)
+  2. 스크린 리더 사용자(사용자가 요소에 초점을 맞추면 레이블을 소리내어 읽음)
+  -->
+  <br>
+  <!-- 값을 미리 체크 -->
+  <label for="apple"><input type="checkbox" id="apple" checked> Apple</label>
+  <label for="banana"><input type="checkbox" id="banana"> Banana</label>
+
+  <hr>
+
+  <!-- 라디오 버튼  -->
+  <label ><input type="radio"> Apple</label>
+  <label ><input type="radio"> Banana</label>
+
+  <!-- name 속성으로 그룹화
+    체크박스는 중복 선택 가능, 라디오 버튼은 그룹당 한개만 선택 가능
+  -->
+  <label><input type="radio" name="fruits" checked> Apple</label>
+  <label><input type="radio" name="fruits"> Banana</label>
+  <hr>
+  <!-- 그 밖에 다른 입력 양식들(w3school참고) (input type에서 컨트롤 스페이스) -->
+  <input type="button" value="닫기">
+  <button type="button">닫기</button>
+  <!-- button 태그의 장점 
+    요소 내부에 텍스트 뿐만 아니라 다른 태그를 넣을 수 있음
+  -->
+
+  <button type="button"><b>닫기</b><br>테스트</button>
+
+  <hr>
+  <!-- 색상 선택 도구(color picker) -->
+  <label for="favcolor">색상 선택:</label>
+  <input type="color" id="favcolor" value="#ff0000">
+
+  <hr>
+  <!-- 날짜 -->
+  <label for="birthday">생일 :</label>
+  <input type="date" id="birthday">
+  <br>
+  <!-- 날짜 + 시간 -->
+  <label for="birthday">생일(날짜+시간) :</label>
+  <input type="datetime-local" id="birthday">
+  <br>
+  <!-- 시간 -->
+  <label for="birthday">생일(날짜+시간) :</label>
+  <input type="time" id="birthday">
+  <hr>
+  
+  <!-- 이메일: submit 시 자동으로 이메일 형식 유효성 검사를 해줌 -->
+  <form action="/signup">
+    <label for="email">이메일 입력:</label>
+    <input type="email" id="email" name="email">
+    <button type="submit">가입</button>
+  </form>
+
+  <hr>
+
+  <!-- 파일 첨부 -->
+  <label for="myfile">내파일:</label>
+  <input type="file" id="myfile">
+  <br>
+  <label for="myfile">다중 파일:</label>
+  <input type="file" id="myfile" multiple>
+  <hr>
+  <!-- 범위 선택 (기본값 : 0 ~ 100)-->
+  <label for="volume">음량(0~10):</label>
+  <input type="range" id="volume" min="0" max="10">
+
+  <!-- (참고) -->
+  <span id="volumeValue"></span>
+  <script>
+    const volumeEl = document.querySelector('#volume');
+    const volumeValueEl = document.querySelector('#volumeValue');
+    volumeValueEl.textContent = volumeEl.value;
+    volumeEl.addEventListener('change', function(){
+      volumeValueEl.textContent = volumeEl.value;
+    });
+  </script>
+
+  <hr>
+  <!-- 비밀번호 -->
+  <label for="pwd">비밀번호:</label>
+  <input type="password" id="pwd" maxlength="10">
+
+  <br>
+  <!-- 셀렉트 박스(콤보박스) -->
+  <!-- value : 서버로 전송되는 선택한 항목의 실제 값 -->
+  <label for="cars">차량 선택:</label> 
+  <select name="cars" id="cars">
+    <option value="volvo">volvo</option>
+    <option value="benz">benz</option>
+    <option value="audi" selected>audi</option>
+  </select>
+  </body>
 </html>
