--- a/05_CSS/10_box_model.html
+++ b/05_CSS/10_box_model.html
@@ -58,13 +58,62 @@
       border: 4px solid red;
     }
 
+    
+    /* Tip! 가로 길이를 갖는 블록 요소의 수평 가운데 정렬 */
+    /* margin: 0 auto; */
     .container-2 .item:first-child{
       margin: 0 auto;
       /* 음수는 잘 사용 안함 */
     }
+    .container-2 .item:last-child{
+      /* 내부 여백 지정 시 요소의 크기가 커짐 */
+      padding: 10px 20px 30px 40px;
+    }
 
-    /* Tip! 가로 길이를 갖는 블록 요소의 수평 가운데 정렬 */
-    /* margin: 0 auto; */
+    .container-3 .item {
+      width: 100px;
+      height: 100px;
+      background-color: orange;
+    }
+
+    .container-3 .item:nth-child(1){
+      /* 실선 padding과 마찬가지로 요소의 크기가 커짐 */
+      border: 10px solid;
+      color: blue;
+      /* 지정된 색이 없으면 요소의 글꼴 색상이 적용 */
+      border: 10px solid gray;
+    }
+    .container-3 .item:nth-child(2){
+      border: 10px dashed #ff0000;
+    }
+    .container-3 .item:nth-child(3){
+      border: 10px dotted rgba(0, 0, 255, 0.5);
+      border-width:10px 20px;
+    }
+
+    .container-4 {
+      width: 100px;
+      height: 100px;
+      margin: 20px;
+      border-radius: 50%;
+      background-color: pink;
+    }
+
+    .container-5 {
+      width: 100px;
+      height: 100px;
+      background-color: orange;
+      border: 5px solid red;
+      /* border로 인해 요소의 크기가 10px 증가 */
+    }
+
+    .container-5.compare{
+      border: 5px solid red;
+      box-sizing: border-box;
+      /* 크기 계산에 padding과 border값도 포함해서 자동으로 content영역이 줄어듦 
+      요소가 지정한 크기보다 커지는것을 방지해줌 */
+    }
+
   </style>
 </head>
 <body>
@@ -109,5 +158,80 @@
     <div class="item"></div>
     <div class="item"></div>
   </div>
+
+  <h4>3.border 실습</h4>
+  <div class="container-3">
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+  </div>
+
+  <h4>4.border-radius 실습</h4>
+  <div class="container-4"></div>
+
+  <h4>5.box-sizing 실습</h4>
+  <div class="container-5 compare">Hello</div>
+  <div class="container-5">Hello</div>
+
+  <!-- (정리) Quiz
+  Q1: width와 height 속성의 역할은?
+  A1: 가로 세로
+
+  Q2: width와 height 속성의 기본값은?
+  A2: auto(블록, 인라인 요소에 따라 auto값의 특성이 달라짐)
+
+  Q3: max-width와 max-height 속성의 기본값은?
+  A3: none(최대치의 제한 없음)
+
+  Q4: min-width와 min-height 속성의 기본값은?
+  A4: 0(최소치에 제한 없음)
+
+  Q5: em 단위의 기준은?
+  A5: 자기 자신의 폰트사이즈
+
+  Q6: 0px과 0vw 중 더 큰 값은?
+  A6: 똑같다
+
+  Q7: margin 속성의 역할은?
+  A7: 요소외부여백
+
+  Q8: margin: 40px 30px 20px;
+      위 코드에서 30px은 어느 방향을 의미하는가?
+  A8: 오른쪽왼쪽
+  
+  Q9: margin: 20px 10px;
+      위 코드에서 20px은 어느 방향을 의미하는가?
+  A9: 위아래
+
+  Q10: padding 속성의 역할은?
+  A10: 안쪽여백
+
+  Q11: padding: 20px 10px 40px 30px;
+      위 코드에서 30px은 어느 방향을 의미하는가?
+  A11: 왼쪽
+  
+  Q12: padding 속성의 특징은?
+  A12: 요소의 크기가 커짐
+
+  Q13: border 속성의 특징은?
+  A13: 요소의 크기가 커짐
+
+  Q14: 두께 2px, 종류 실선, 색상 빨강의 테두리 선을 코드로 작성하시오!
+  A14: border : 2px solid red;
+
+  Q15: 요소의 모서리를 둥글게 깎기 위한 속성은?
+  A15: border-radius
+
+  Q16: width: 100px; padding: 20px; border: 1px solid red;
+      위 코드가 지정된 요소의 실제 가로 너비는?
+  A16: 142px
+
+  Q17: width: 100px; padding: 20px; border: 1px solid red; box-sizing: border-box;
+      위 코드가 지정된 요소의 실제 가로 너비는?
+  A17: 100px
+
+  Q18: box-sizing 속성의 기본값은?
+  A18: cotent-box
+-->
 </body>
 </html>
