--- a/05_CSS/11_overflow.html
+++ b/05_CSS/11_overflow.html
@@ -16,7 +16,7 @@
       hidden : 넘친 내용을 잘라냄
       scroll : 넘친만큼 잘라내고 스크롤바가 무조건 생김(잘안씀)
       auto : 넘친만큼 잘라내고 스크롤바가 안넘치면 안생김
-      */
+      x,y축 개별 지정 가능*/
     }
 
     .child{
@@ -30,5 +30,13 @@
   <div class="parent">
     <div class="child"></div>
   </div>
+
+  <!-- (정리) Quiz
+  Q1: 요소 넘침을 잘라낼 때 사용하는 속성과 값은?
+  A1: overflow : hidden;
+
+  Q2: overflow 속성의 기본값은?
+  A2: visible
+-->
 </body>
 </html>
