--- a/05_CSS/20_flex_box.html
+++ b/05_CSS/20_flex_box.html
@@ -110,7 +110,7 @@
   <h1>flex-direction: flex item들의 정렬 방향 설정</h1>
   <h2>주의! 방향을 어떻게 설정하느냐에 따라 주축이 바뀜</h2>
 
-  <h1>flex-direction: flex-row</h1>
+  <h1>flex-direction: flex-row</h1>ㅣ
   <div class="parent d-flex flex-row">
     <div class="child-1">1</div>
     <div class="child-2">2</div>
