--- a/06_portfolio-site/index.html
+++ b/06_portfolio-site/index.html
@@ -19,7 +19,7 @@
   <!-- 구글 머터리얼 아이콘 -->
   <!-- 구글에서 제공하는 머티리얼 스타일 아이콘, 글자처럼 취급 가능한 장점 -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-  <link rel="stylesheet" href="main.css">
+
 
   <!-- 구글 웹폰트 연결 -->
   <!-- 오픈 라이선스 폰트, 한글 지원하는지 확인 및 필요한 굵기를 연결 -->
@@ -27,6 +27,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="main.css">
+
+  <!-- ScrollMagic -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </head>
 <body>
   <header>
@@ -48,7 +54,7 @@
     </div>
   </header>
 
-  <!-- visual -->
+  <!-- VISUAL -->
   <!-- 배경 비디오 적용(또는 슬라이드로 만들고 싶으면 swiper 참고) -->
   <section class="visual">
     <video autoplay muted loop>
@@ -56,30 +62,159 @@
     </video>
   </section>
 
-  <!-- about -->
-   <section id="about" class="about">
-    <div class="inner">
-      <h2 class="title font-en">ABOUT</h2>
-      <div class="about__wrapper">
-        <div class="about__img">
-          <!-- 본인 프로필 이미지로 변경 -->
-          <img src="images/profile.jpg" alt="프로필">
-        </div>
+  <!-- ABOUT -->
+  <section id="about" class="about">
+  <div class="inner">
+    <h2 class="title font-en">ABOUT</h2>
+    <div class="about__wrapper">
+      <div class="about__img">
+        <!-- 본인 프로필 이미지로 변경 -->
+        <img src="images/profile.jpg" alt="프로필">
+      </div>
 
-        <div class="about__text">
-          <!-- 본인 슬로건, 이름(생년월), 교육 사항 등 작성 -->
-          <strong class="slogan font-en">Simple is Best</strong>
-          <h3 class="font-en">Yoo Da Som</h3>
+      <div class="about__text">
+        <!-- 본인 슬로건, 이름(생년월), 교육 사항 등 작성 -->
+        <strong class="slogan font-en">Simple is Best</strong>
+        <h3 class="font-en">Yoo Da Som</h3>
+        <div>
+          <h4 class="font-en">Education</h4>
+            <ul>
+              <li>10.03 ~ 12.02 명지전문대학교 정보통신공학과 졸업</li>
+              <li>24.06 ~ 24.12 풀스택 개발자 과정 수료</li>
+            </ul>
+        </div>
+      </div>
+    </div>
+    <!-- 연락처 버튼 -->
+    <div class="about__btn font-en">
+      <a href="#contact">
+        <img src="images/icon/icon_contact.png" alt="전화">
+          CONTACT
+      </a>
+    </div>
+  </div>
+  </section>
+
+  <!-- SKILL -->
+  <section id="skill" class="skill scroll-spy">
+    <div class="inner">
+      <h2 class="title font-en">SKILL</h2>
+      <ul class="skill__list">
+        <li>
           <div>
-            <h4 class="font-en">Education</h4>
-              <ul>
-                <li>10.03 ~ 12.02 명지전문대학교 정보통신공학과 졸업</li>
-                <li>24.06 ~ 24.12 풀스택 개발자 과정 수료</li>
-              </ul>
+            <p class="font-en">Java</p>
+          </div>
+          <h3 class="font-en">Java<br>Programing</h3>
+          <ul>
+            <li>객체지향</li>
+            <li>람다식</li>
+            <li>파일 입출력</li>
+            <li>JDBC</li>
+          </ul>
+        </li>
+
+        <li>
+          <div>
+            <p class="font-en">Html</p>
+          </div>
+          <h3 class="font-en">HTML5</h3>
+          <ul>
+            <li>웹페이지 구조 설계</li>
+          </ul>
+        </li>
+
+        <li>
+          <div>
+            <p class="font-en">Css</p>
+          </div>
+          <h3 class="font-en">CSS3</h3>
+          <ul>
+            <li>웹페이지 레이아웃 설계</li>
+            <li>웹페이지 디자인</li>
+            <li>반응형 제작</li>
+          </ul>
+        </li>
+
+        <li>
+          <div>
+            <p class="font-en">Js</p>
+          </div>
+          <h3 class="font-en">JavaScript</h3>
+          <ul>
+            <li>DOM 조작, 제어</li>
+            <li>이벤트 처리</li>
+            <li>비동기 통신</li>
+          </ul>
+        </li>
+
+        <li>
+          <div>
+            <p class="font-en">React</p>
+          </div>
+          <h3 class="font-en">React JS</h3>
+          <ul>
+            <li>SPA 개발</li>
+            <li>전역 상태 관리</li>
+            <li>클라이언트 라우팅</li>
+            <li>CSR 방식</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+
+  <!-- WORK -->
+  <section id="work" class="work">
+    <div class="inner">
+      <h3 class="title font-en">WORK</h3>
+      <div class="port">
+        <div class="port__img">
+          <img src="images/work_1.jpg" alt="포트폴리오1">
+        </div>
+        <div class="port__text">
+          <h3>프로젝트명</h3>
+          <ul>
+            <li><span>주요 기능 : </span>주요 기능 설명</li>
+            <li><span>적용 기술 : </span>HTML, CSS, JS, React, Java, Spring Boot</li>
+            <li><span>GitHub : </span>깃허브 주소</li>
+            <li><span>URL : </span>배포 주소</li>
+          </ul>
+          <div class="btn-group" target="_blank">
+            <a href="" class="btn">README</a>
+            <a href="javascript:void(0)" class="btn btn--brown btn-modal">모달</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="port">
+        <div class="port__img">
+          <img src="images/work_2.jpg" alt="포트폴리오2">
+        </div>
+        <div class="port__text">
+          <h3>프로젝트명</h3>
+          <ul>
+            <li><span>주요 기능 : </span>주요 기능 설명</li>
+            <li><span>적용 기술 : </span>HTML, CSS, JS, React, Java, Spring Boot</li>
+            <li><span>GitHub : </span>깃허브 주소</li>
+            <li><span>URL : </span>배포 주소</li>
+          </ul>
+          <div class="btn-group" target="_blank">
+            <a href="" class="btn">README</a>
+            <a href="javascript:void(0)" class="btn btn--brown btn-modal">모달</a>
           </div>
         </div>
       </div>
     </div>
-   </section>
+  </section>
+
+  <!-- MODAL -->
+  <div id="modal">
+    <div class="modal__inner">
+      <img src="images/work_4.jpg" alt="샘플">
+      <span class="material-symbols-outlined btn-close">close</span>
+    </div>
+  </div>
+  <script src="js/main.js"></script>
 </body>
 </html>
