--- a/06_portfolio-site/index.html
+++ b/06_portfolio-site/index.html
@@ -208,6 +208,35 @@
     </div>
   </section>
 
+  
+  <!-- CONTACT -->
+  <section id="contact" class="contact font-en scroll-spy">
+    <div class="inner">
+      <h2 class="title">CONTACT</h2>
+      <div class="contact__info">
+        <ul>
+          <li><a href="https://github.com/geoblo">github.com/somdaryu</a></li>
+          <li>010-9094-9646</li>
+          <li>332657@naver.com</li>
+        </ul>
+      </div>
+      <div class="contact__sns">
+        <ul>
+          <li>
+            <a href="인스타그램 주소" target="_blank">
+              <img src="images/icon/icon_insta.png" alt="인스타그램">
+            </a>
+          </li>
+          <li>
+            <a href="유튜브 주소" target="_blank">
+              <img src="images/icon/icon_youtube.png" alt="유튜브">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
   <!-- MODAL -->
   <div id="modal">
     <div class="modal__inner">
@@ -215,6 +244,24 @@
       <span class="material-symbols-outlined btn-close">close</span>
     </div>
   </div>
-  <script src="js/main.js"></script>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="inner">
+      <p class="copyright">
+        &copy; <span class="this-year"></span>
+        훈련생이름. <span class="font-en">All Rights Reserved.</span>
+      </p>
+    </div>
+  </footer>
+
+
+  <!-- SCROLL TO TOP -->
+  <div id="to-top">
+    <a href="#">
+      <span class="material-symbols-outlined">arrow_upward</span>
+    </a>
+  </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
