--- a/07_myportfolio/index.html
+++ b/07_myportfolio/index.html
@@ -63,10 +63,10 @@
           <li>안녕하세요. 성장을 좋아하는 개발자 <b>유다솜</b>입니다.</li>
         </ul>
         <ul class="vc__bottom">
-          <li>Git : <a href="https://github.com/geoblo">github.com/somdaryu</a></li>
-          <li>Blog : <a href="https://somnote.tistory.com/">https://somnote.tistory.com/</a></li>
-          <li>Email : 332657@naver.com</li>
-          <li>Instagram : ryudsom</li>
+          <li><img src="images/git.png" alt="git"> <a href="https://github.com/geoblo">github.com/somdaryu</a></li>
+          <li><img src="images/tstory.svg" alt="blog"> <a href="https://somnote.tistory.com/">https://somnote.tistory.com/</a></li>
+          <li><img src="images/google.png" alt="email"> lyuds9094@gmail.com</li>
+          <li><img src="images/insta.svg" alt="instagram">ryudsom</li>
         </ul>
       </div>
     </div>
@@ -79,30 +79,53 @@
   <div class="inner">
     <h2 class="title font-en">ABOUT</h2>
     <div class="about__wrapper">
-      <div class="about__img">
-        <!-- 본인 프로필 이미지로 변경 -->
-        <img src="images/profile.jpg" alt="프로필">
-      </div>
-
+      <!-- 좌우명, 이름 -->
       <div class="about__text">
-        <!-- 본인 슬로건, 이름(생년월), 교육 사항 등 작성 -->
-        <strong class="slogan font-en">Simple is Best</strong>
-        <h3 class="font-en">Yoo Da Som</h3>
-        <div>
-          <h4 class="font-en">Education</h4>
-            <ul>
-              <li>10.03 ~ 12.02 명지전문대학교 정보통신공학과 졸업</li>
-              <li>24.06 ~ 24.12 풀스택 개발자 과정 수료</li>
-            </ul>
+        <img class="about__img" src="images/profile.jpg" alt="prifile">
+        <strong class="slogan font-en">"Become a man of value."</strong>
+        <strong class="slogan_ko">가치있는 사람이 되자.</strong>
+        
+        <div class="about__name">
+          <p>유다솜</p>
+          <p class="font-en">Yoo Da Som</p>
         </div>
       </div>
+
+      <!-- 경력사항-->
+      <div class="about__text">
+        <h4 class="font-en">Education</h4>
+        <ul>
+          <li>
+            <p>2016.03.01 ~ 2022.02.11</p>
+            <p>명지전문대학교 정보통신공학과 졸업</p>
+          </li>
+          <li>
+            <p>2024.06.19 ~ 2024.12.19</p> 
+            <p>풀스택 개발자 과정 수료</p>
+          </li>
+        </ul>
+        <h4 class="font-en">Career</h4>
+        <ul>
+          <li>
+            <p>2022.11.02 ~ 2023.02.13</p> 
+            <p>바탕에비뉴 주식회사 (웹 퍼블리셔 주임)</p>
+          </li>
+          <li>
+            <p>2021.08.26 ~ 2022.10.28</p> 
+            <p>탑스넷 (쇼핑몰 MD, 웹 디자이너 주임)</p>
+          </li>
+        </ul>
+
+        <h4 class="font-en">Certification</h4>
+        <ul>
+          <li>
+            <p>취득일 : 2021.07.16</p> 
+            <p>GTQ그래픽기술자격 1급</p>
+          </li>
+        </ul>
+      </div>
+
     </div>
-    <!-- 연락처 버튼 -->
-    <div class="about__btn font-en">
-      <a href="#contact">
-        <img src="images/icon/icon_contact.png" alt="전화">
-          CONTACT
-      </a>
     </div>
   </div>
   </section>
@@ -111,17 +134,50 @@
   <section id="skill" class="skill scroll-spy">
     <div class="inner">
       <h2 class="title font-en">SKILL</h2>
+      <p class="skill-title">Design</p>
+      <ul class="skill__list">
+        <li>
+          <div>
+            <p class="font-en">Ps</p>
+          </div>
+          <h3 class="font-en">Photoshop</h3>
+          <ul>
+            <li>숙련도 : 중</li>
+          </ul>
+        </li>
+
+        <li>
+          <div>
+            <p class="font-en">Ai</p>
+          </div>
+          <h3 class="font-en">Illustrator</h3>
+          <ul>
+            <li>숙련도 : 중상</li>
+          </ul>
+        </li>
+
+        <li>
+          <div>
+            <p class="font-en">Figma</p>
+          </div>
+          <h3 class="font-en">Figma</h3>
+          <ul>
+            <li>숙련도 : 중</li>
+          </ul>
+        </li>
+      </ul>
+
+      <p class="skill-title">Programing</p>
       <ul class="skill__list">
         <li>
           <div>
             <p class="font-en">Java</p>
           </div>
-          <h3 class="font-en">Java<br>Programing</h3>
+          <h3 class="font-en">
+            Java
+          </h3>
           <ul>
-            <li>객체지향</li>
-            <li>람다식</li>
-            <li>파일 입출력</li>
-            <li>JDBC</li>
+            <li>숙련도 : 중</li>
           </ul>
         </li>
 
@@ -131,7 +187,7 @@
           </div>
           <h3 class="font-en">HTML5</h3>
           <ul>
-            <li>웹페이지 구조 설계</li>
+            <li>숙련도 : 상</li>
           </ul>
         </li>
 
@@ -141,9 +197,7 @@
           </div>
           <h3 class="font-en">CSS3</h3>
           <ul>
-            <li>웹페이지 레이아웃 설계</li>
-            <li>웹페이지 디자인</li>
-            <li>반응형 제작</li>
+            <li>숙련도 : 상</li>
           </ul>
         </li>
 
@@ -153,9 +207,7 @@
           </div>
           <h3 class="font-en">JavaScript</h3>
           <ul>
-            <li>DOM 조작, 제어</li>
-            <li>이벤트 처리</li>
-            <li>비동기 통신</li>
+            <li>숙련도 : 하</li>
           </ul>
         </li>
 
@@ -165,10 +217,7 @@
           </div>
           <h3 class="font-en">React JS</h3>
           <ul>
-            <li>SPA 개발</li>
-            <li>전역 상태 관리</li>
-            <li>클라이언트 라우팅</li>
-            <li>CSR 방식</li>
+            <li>숙련도 : 하</li>
           </ul>
         </li>
       </ul>
@@ -185,15 +234,18 @@
           <img src="images/work_1.jpg" alt="포트폴리오1">
         </div>
         <div class="port__text">
-          <h3>프로젝트명</h3>
+          <h3>[임시] 프로젝트명 1</h3>
           <ul>
-            <li><span>주요 기능 : </span>주요 기능 설명</li>
             <li><span>적용 기술 : </span>HTML, CSS, JS, React, Java, Spring Boot</li>
-            <li><span>GitHub : </span>깃허브 주소</li>
-            <li><span>URL : </span>배포 주소</li>
+            <li><span>주요 기능 : </span>
+              vue3를 이용한 영화검색페이지입니다.<br>
+              vue3에 대해 학습을 하였고 영화검색을위한 OMDBAPI, route 관리를 위한 vue-router, state 관리를 위한 vuex에 대한 학습, netlify를 이용한 환경변수 설정에 대한 내용들을 학습했습니다.
+              <br>
+              전자정부 프레임워크 자바 개발자 양성 과정에서 협업하여 진행한 팀 프로젝트로 고객센터와 예매 페이지를 담당했습니다. 이용하는 고객의 문의를 받거나 공지사항을 게시하는 게시판을 구현하고 예매 기능에는 다른 이용자가 예매 진행중이거나 예매가 완료된 자리는 자리선택을 할 수 없게하고 결제 진행 중 일정시간 안에 결제하지 않으면 예매진행이 취소되는 기능을 구현했습
+            </li>
           </ul>
           <div class="btn-group" target="_blank">
-            <a href="" class="btn">README</a>
+            <a href="https://github.com/somdaryu" target="_blank" class="btn">GitHub</a>
             <a href="javascript:void(0)" class="btn btn--brown btn-modal">모달</a>
           </div>
         </div>
@@ -204,15 +256,16 @@
           <img src="images/work_2.jpg" alt="포트폴리오2">
         </div>
         <div class="port__text">
-          <h3>프로젝트명</h3>
+          <h3>[임시] 프로젝트명 2</h3>
           <ul>
-            <li><span>주요 기능 : </span>주요 기능 설명</li>
             <li><span>적용 기술 : </span>HTML, CSS, JS, React, Java, Spring Boot</li>
-            <li><span>GitHub : </span>깃허브 주소</li>
-            <li><span>URL : </span>배포 주소</li>
+            <li><span>주요 기능 : </span>
+              스타벅스 메인페이지 클론코딩 입니다.<br>
+              교육과정중 소홀히 했던 Front End 에 대한 공부를 위해 한 프로젝트이고, 단순한 html5 css js에 대한 복습부터 자주사용하는 javascript library들에대한 학습을 진행하였습니다.
+            </li>
           </ul>
           <div class="btn-group" target="_blank">
-            <a href="" class="btn">README</a>
+            <a href="https://github.com/somdaryu" target="_blank" class="btn">GitHub</a>
             <a href="javascript:void(0)" class="btn btn--brown btn-modal">모달</a>
           </div>
         </div>
