--- a/07_myportfolio/index.html
+++ b/07_myportfolio/index.html
@@ -96,12 +96,12 @@
         <h4 class="font-en">Education</h4>
         <ul>
           <li>
-            <p>2016.03.01 ~ 2022.02.11</p>
-            <p>명지전문대학교 정보통신공학과 졸업</p>
+            <p>2024.06.19 ~ 2024.12.19</p> 
+            <p>풀스택 개발자 양성 과정 수료</p>
           </li>
           <li>
-            <p>2024.06.19 ~ 2024.12.19</p> 
-            <p>풀스택 개발자 과정 수료</p>
+            <p>2016.03.01 ~ 2022.02.11</p>
+            <p>명지전문대학교 정보통신공학과 졸업</p>
           </li>
         </ul>
         <h4 class="font-en">Career</h4>
@@ -120,7 +120,7 @@
         <ul>
           <li>
             <p>취득일 : 2021.07.16</p> 
-            <p>GTQ그래픽기술자격 1급</p>
+            <p>GTQ 그래픽기술자격 1급</p>
           </li>
         </ul>
       </div>
@@ -134,93 +134,145 @@
   <section id="skill" class="skill scroll-spy">
     <div class="inner">
       <h2 class="title font-en">SKILL</h2>
-      <p class="skill-title">Design</p>
-      <ul class="skill__list">
-        <li>
-          <div>
-            <p class="font-en">Ps</p>
-          </div>
-          <h3 class="font-en">Photoshop</h3>
-          <ul>
-            <li>숙련도 : 중</li>
+      <div class="d-flex justy-center align-center">
+        <div class="mr-20">
+          <p class="skill-title skill-design">Design</p>
+          <ul class="skill__list list-1">
+            <li>
+              <div>
+                <img src="images/photoshop.png" alt="photoshop">
+              </div>
+              <h3 class="font-en">Photoshop</h3>
+              <ul>
+                <li>숙련도 : 중</li>
+              </ul>
+            </li>
+            <li>
+              <div>
+                <img src="images/ai.png" alt="Illustrator">
+              </div>
+              <h3 class="font-en">Illustrator</h3>
+              <ul>
+                <li>숙련도 : 상</li>
+              </ul>
+            </li>
+            <li>
+              <div>
+                <img src="images/figma.webp" alt="figma">
+              </div>
+              <h3 class="font-en">Figma</h3>
+              <ul>
+                <li>숙련도 : 중</li>
+              </ul>
+            </li>
           </ul>
-        </li>
+        </div>
+        <div>
+          <p class="skill-title skill-pro">Programing</p>
+          <ul class="skill__list list-2">
+            <li>
+              <div>
+                <img src="images/java.png" alt="java">
+              </div>
+              <h3 class="font-en">
+                Java
+              </h3>
+              <ul>
+                <li>숙련도 : 중</li>
+              </ul>
+            </li>
+            <li>
+              <div>
+                <img src="images/html.png" alt="html5">
+              </div>
+              <h3 class="font-en">HTML5</h3>
+              <ul>
+                <li>숙련도 : 상</li>
+              </ul>
+            </li>
+            <li>
+              <div>
+                <img src="images/css.png" alt="css3">
+              </div>
+              <h3 class="font-en">CSS3</h3>
+              <ul>
+                <li>숙련도 : 상</li>
+              </ul>
+            </li>
+            <li>
+              <div>
+                <img src="images/js.png" alt="javascript">
+              </div>
+              <h3 class="font-en">JavaScript</h3>
+              <ul>
+                <li>숙련도 : 하</li>
+              </ul>
+            </li>
+            <li>
+              <div>
+                <img src="images/react.png" alt="react">
+              </div>
+              <h3 class="font-en">React JS</h3>
+              <ul>
+                <li>숙련도 : 하</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="d-bottom">
+        <div>
+          <p class="skill-title skill-design">Have using it</p>
+          <ul class="skill__list list-1">
+            <li>
+              <div>
+                <img src="images/xd.png" alt="xd">
+              </div>
+              <h3 class="font-en">XD</h3>
+            </li>
+            <li>
+              <div>
+                <img src="images/indesign.png" alt="indesign">
+              </div>
+              <h3 class="font-en">Indesign</h3>
+            </li>
+            <li>
+              <div>
+                <img src="images/phython.png" alt="phython">
+              </div>
+              <h3 class="font-en">Phython</h3>
+            </li>
 
-        <li>
-          <div>
-            <p class="font-en">Ai</p>
-          </div>
-          <h3 class="font-en">Illustrator</h3>
-          <ul>
-            <li>숙련도 : 중상</li>
-          </ul>
-        </li>
+            <li>
+              <div>
+                <img src="images/c.png" alt="c">
+              </div>
+              <h3 class="font-en">C</h3>
+            </li>
 
-        <li>
-          <div>
-            <p class="font-en">Figma</p>
-          </div>
-          <h3 class="font-en">Figma</h3>
-          <ul>
-            <li>숙련도 : 중</li>
-          </ul>
-        </li>
-      </ul>
+            <li>
+              <div>
+                <img src="images/spring.png" alt="spring">
+              </div>
+              <h3 class="font-en">Spring</h3>
+            </li>
 
-      <p class="skill-title">Programing</p>
-      <ul class="skill__list">
-        <li>
-          <div>
-            <p class="font-en">Java</p>
-          </div>
-          <h3 class="font-en">
-            Java
-          </h3>
-          <ul>
-            <li>숙련도 : 중</li>
-          </ul>
-        </li>
+            <li>
+              <div>
+                <img src="images/sass.png" alt="sass">
+              </div>
+              <h3 class="font-en">Sass</h3>
+            </li>
 
-        <li>
-          <div>
-            <p class="font-en">Html</p>
-          </div>
-          <h3 class="font-en">HTML5</h3>
-          <ul>
-            <li>숙련도 : 상</li>
+            <li>
+              <div>
+                <img src="images/oracle.png" alt="oracle">
+              </div>
+              <h3 class="font-en">Oracle</h3>
+            </li>
           </ul>
-        </li>
-
-        <li>
-          <div>
-            <p class="font-en">Css</p>
-          </div>
-          <h3 class="font-en">CSS3</h3>
-          <ul>
-            <li>숙련도 : 상</li>
-          </ul>
-        </li>
-
-        <li>
-          <div>
-            <p class="font-en">Js</p>
-          </div>
-          <h3 class="font-en">JavaScript</h3>
-          <ul>
-            <li>숙련도 : 하</li>
-          </ul>
-        </li>
-
-        <li>
-          <div>
-            <p class="font-en">React</p>
-          </div>
-          <h3 class="font-en">React JS</h3>
-          <ul>
-            <li>숙련도 : 하</li>
-          </ul>
-        </li>
-      </ul>
+        </div>
+      </div>
     </div>
   </section>
 
