--- a/07_myportfolio/index.html
+++ b/07_myportfolio/index.html
@@ -124,16 +124,16 @@
           </li>
         </ul>
       </div>
-
     </div>
     </div>
-  </div>
   </section>
 
   <!-- SKILL -->
   <section id="skill" class="skill scroll-spy">
     <div class="inner">
+      
       <h2 class="title font-en">SKILL</h2>
+
       <div class="d-flex justy-center align-center">
         <div class="mr-20">
           <p class="skill-title skill-design">Design</p>
@@ -144,7 +144,7 @@
               </div>
               <h3 class="font-en">Photoshop</h3>
               <ul>
-                <li>숙련도 : 중</li>
+                <li>숙련도 : <span class="color-middle">중</span></li>
               </ul>
             </li>
             <li>
@@ -153,7 +153,7 @@
               </div>
               <h3 class="font-en">Illustrator</h3>
               <ul>
-                <li>숙련도 : 상</li>
+                <li>숙련도 : <span class="color-top">상</span></li>
               </ul>
             </li>
             <li>
@@ -162,7 +162,7 @@
               </div>
               <h3 class="font-en">Figma</h3>
               <ul>
-                <li>숙련도 : 중</li>
+                <li>숙련도 : <span class="color-middle">중</span></li>
               </ul>
             </li>
           </ul>
@@ -178,7 +178,7 @@
                 Java
               </h3>
               <ul>
-                <li>숙련도 : 중</li>
+                <li>숙련도 : <span class="color-middle">중</span></li>
               </ul>
             </li>
             <li>
@@ -187,7 +187,7 @@
               </div>
               <h3 class="font-en">HTML5</h3>
               <ul>
-                <li>숙련도 : 상</li>
+                <li>숙련도 : <span class="color-top">상</span></li>
               </ul>
             </li>
             <li>
@@ -196,7 +196,7 @@
               </div>
               <h3 class="font-en">CSS3</h3>
               <ul>
-                <li>숙련도 : 상</li>
+                <li>숙련도 : <span class="color-top">상</span></li>
               </ul>
             </li>
             <li>
@@ -205,7 +205,7 @@
               </div>
               <h3 class="font-en">JavaScript</h3>
               <ul>
-                <li>숙련도 : 하</li>
+                <li>숙련도 : <span class="color-bottom">하</span></li>
               </ul>
             </li>
             <li>
@@ -214,12 +214,13 @@
               </div>
               <h3 class="font-en">React JS</h3>
               <ul>
-                <li>숙련도 : 하</li>
+                <li>숙련도 : <span class="color-bottom">하</span></li>
               </ul>
             </li>
           </ul>
         </div>
       </div>
+      
       <div class="d-bottom">
         <div>
           <p class="skill-title skill-design">Have using it</p>
@@ -273,6 +274,15 @@
           </ul>
         </div>
       </div>
+
+      <div class="list-caption">
+        <ul>
+          <li>📌 숙련도</li>
+          <li><span class="color-top">상</span> : 어렵지 않게 응용할 수 있어요.</li>
+          <li><span class="color-middle">중 </span>: 어느정도 응용할 수 있어요.</li>
+          <li><span class="color-bottom">하</span> : 스스로 응용하기 어려워요.</li>
+        </ul>
+      </div>
     </div>
   </section>
 
@@ -296,9 +306,9 @@
               전자정부 프레임워크 자바 개발자 양성 과정에서 협업하여 진행한 팀 프로젝트로 고객센터와 예매 페이지를 담당했습니다. 이용하는 고객의 문의를 받거나 공지사항을 게시하는 게시판을 구현하고 예매 기능에는 다른 이용자가 예매 진행중이거나 예매가 완료된 자리는 자리선택을 할 수 없게하고 결제 진행 중 일정시간 안에 결제하지 않으면 예매진행이 취소되는 기능을 구현했습
             </li>
           </ul>
-          <div class="btn-group" target="_blank">
+          <div class="btn-group">
             <a href="https://github.com/somdaryu" target="_blank" class="btn">GitHub</a>
-            <a href="javascript:void(0)" class="btn btn--brown btn-modal">모달</a>
+            <a href="javascript:void(0)" class="btn btn--pink btn-modal">View</a>
           </div>
         </div>
       </div>
@@ -316,9 +326,9 @@
               교육과정중 소홀히 했던 Front End 에 대한 공부를 위해 한 프로젝트이고, 단순한 html5 css js에 대한 복습부터 자주사용하는 javascript library들에대한 학습을 진행하였습니다.
             </li>
           </ul>
-          <div class="btn-group" target="_blank">
+          <div class="btn-group">
             <a href="https://github.com/somdaryu" target="_blank" class="btn">GitHub</a>
-            <a href="javascript:void(0)" class="btn btn--brown btn-modal">모달</a>
+            <a href="javascript:void(0)" class="btn btn--pink btn-modal">View</a>
           </div>
         </div>
       </div>
@@ -332,6 +342,14 @@
       <span class="material-symbols-outlined btn-close">close</span>
     </div>
   </div>
+
+    <!-- MODAL -->
+    <div id="modal2">
+      <div class="modal__inner">
+        <img src="images/work_4.jpg" alt="샘플">
+        <span class="material-symbols-outlined btn-close">close</span>
+      </div>
+    </div>
 
   <!-- FOOTER -->
   <footer>
