--- a/07_myportfolio/index.html
+++ b/07_myportfolio/index.html
@@ -10,7 +10,7 @@
   
   (참고)파비콘 만들기: https://iconifier.net
   -->
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="images/logo.png">
   <!-- reset css 적용 -->
   <!-- 브라우저별로 다른 기본 스타일이 적용되는 것을 초기화 -->
   <link href="
@@ -52,6 +52,11 @@
           <li><a href="#work">WORK</a></li>
         </ul>
       </nav>
+
+      <!-- 햄버거 버튼 -->
+      <a href="javascript:void(0)" class="btn-hamburger">
+        <span class="material-symbols-outlined">menu</span>
+      </a>
     </div>
   </header>
 
